WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255294
[ macOS ] 2 http/tests/media/FairPlay tests are broken.
https://bugs.webkit.org/show_bug.cgi?id=255294
Summary
[ macOS ] 2 http/tests/media/FairPlay tests are broken.
Bri Harris
Reported
2023-04-11 10:51:33 PDT
The follow two tests: http/tests/media/fairplay/legacy-fairplay-mse-v2.html http/tests/media/fairplay/legacy-fairplay-mse-v3.html are broken for macOS. There are a constant string of timeouts, crashes and failures HISTORY:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Fmedia%2Ffairplay%2Flegacy-fairplay-mse-v2.html&test=http%2Ftests%2Fmedia%2Ffairplay%2Flegacy-fairplay-mse-v3.html
TEXT DIFF for MSE-V3: @@ -14,6 +14,7 @@ Appending Encrypted Video Payload FETCH: content/elementary-stream-video-payload.m4v OK EVENT(updateend) -EVENT(canplay) +EVENT(webkitkeyerror) +FAIL: update() failed END OF TEST TIMEOUT TEXT for MSE-V2: @@ -1,19 +1,4 @@ +FAIL: Timed out waiting for notifyDone to be called Created mediaSource -EVENT(sourceopen) -- -Appending Encrypted Video Header -FETCH: content/elementary-stream-video-header-keyid-1.m4v OK -EVENT(webkitneedkey) -EVENT(webkitkeymessage) -EXPECTED (uInt8ArrayToString(event.message) == 'certificate') OK -FETCH: resources/cert.der OK -EVENT(webkitkeymessage) -PROMISE: licenseResponse resolved -- -Appending Encrypted Video Payload -FETCH: content/elementary-stream-video-payload.m4v OK -EVENT(updateend) -EVENT(canplay) -END OF TEST
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-11 10:52:08 PDT
<
rdar://problem/107891205
>
Bri Harris
Comment 2
2023-04-11 11:17:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12617
EWS
Comment 3
2023-04-11 11:24:56 PDT
Test gardening commit
262832@main
(2bfb6ab528f6): <
https://commits.webkit.org/262832@main
> Reviewed commits have been landed. Closing PR #12617 and removing active labels.
Jer Noble
Comment 4
2023-06-11 14:35:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14852
EWS
Comment 5
2023-06-16 11:21:54 PDT
Committed
265252@main
(46b462205dd9): <
https://commits.webkit.org/265252@main
> Reviewed commits have been landed. Closing PR #14852 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug