Source/WebKit/GPUProcess/media/RemoteCDMFactoryProxy.h
@@ -50,6 +50,8 @@ public:
     RemoteCDMFactoryProxy(GPUConnectionToWebProcess&);
     virtual ~RemoteCDMFactoryProxy();
 
+    void clear();
+
     void didReceiveMessageFromWebProcess(IPC::Connection& connection, IPC::Decoder& decoder) { didReceiveMessage(connection, decoder); }
     bool didReceiveSyncMessageFromWebProcess(IPC::Connection& connection, IPC::Decoder& decoder, UniqueRef<IPC::Encoder>& encoder) { return didReceiveSyncMessage(connection, decoder, encoder); }
     void didReceiveCDMMessage(IPC::Connection&, IPC::Decoder&);
